--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="modernizr-dev.js"></script>
   <title>Using Modernizr CSS classes | Lesson 2.1 | A beginners guide to Modernizr</title>
 </head>
