--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <script src="modernizr-dev.js"></script>
-  <title>Using Modernizr CSS classes | Lesson 2.1 | A beginners guide to Modernizr</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>.no-feature vs .feature, what should I use? | Lesson 2.2 | A beginners guide to Modernizr</title>
 </head>
 <body>
 
-  <h1>Shopping list:</h1>
+  <h1>Your browsers supports all the features in green</h1>
 
   <ul>
-    <li>Bananas</li>
-    <li>Apples</li>
-    <li>Almonds</li>
-    <li>Bread</li>
+    <li class='flex'>Flexbox</li>
+    <li class='webrtc'>WebRTC</li>
+    <li class='webp'>WebP images</li>
+    <li class='serviceworkers'>Service Workers</li>
   </ul>
 
 </body>
