--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <script src="modernizr-dev.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>.no-feature vs .feature, what should I use? | Lesson 2.2 | A beginners guide to Modernizr</title>
+  <title>When not to use the Modernizr CSS classes | Lesson 2.3 | A beginners guide to Modernizr</title>
 </head>
 <body>
 
@@ -12,9 +12,6 @@
 
   <ul>
     <li class='flex'>Flexbox</li>
-    <li class='webrtc'>WebRTC</li>
-    <li class='webp'>WebP images</li>
-    <li class='serviceworkers'>Service Workers</li>
   </ul>
 
 </body>
