--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="modernizr-dev.noshiv.js"></script>
+  <script src="modernizr-dev.printshiv.js"></script>
   <title>What is the HTML5Shiv and print shiv? | Lesson 3.6 | A beginners guide to Modernizr</title>
 </head>
 <body>
