--- a/search.html
+++ b/search.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="modernizr-dev.js"></script>
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="script.js"></script>
   <title>.no-js vs .js class | Lesson 4.2 | A beginners guide to Modernizr</title>
 </head>
 <body>
